[package]
name = "steady-pocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-trait = "0.1.73"
log = "0.4.20"
env_logger = "0.10.0"
tokio = { version = "1.33.0", "features" = ["full"] }
config = "0.13.1"
derive_more = "0.99.17"
dotenv = "0.15.0"
thiserror = "1.0.49"
serde = { version = "1.0.137", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite", "migrate"] }
